# xds-api

./: CONTRIBUTING.md  Cargo.toml  README.md  protobufs.toml
.github/workflows/: test.yml
src/: any.rs  lib.rs  value.rs
tests/: generate_sources.rs  test_pbjson.rs  test_value.rs
xds-api/: Cargo.toml
xds-api/src/: any.rs
xds-api/tests/: test_any.rs
xtask/: Cargo.toml
xtask/src/: main.rs
