[workspace]
resolver = "2"
members = ["xds-api", "xtask"]
default-members = ["xds-api"]

[workspace.dependencies]
tonic = { version = "0.11", default-features = false, features = [
    "prost",
    "codegen",
] }
tonic-build = { version = "0.11", default-features = false, features = [
    "prost",
] }
pbjson = "0.7"
pbjson-build = "0.7"
prost = "0.12"
prost-build = "0.12"
prost-types = "0.12"
