[package]
name = "xds-api"
version = "0.1.0"
edition = "2021"
authors = ["Junction Labs"]
license = "Apache-2.0"
repository = "https://github.com/junction-labs/xds-api"
homepage = "https://github.com/junction-labs/xds-api"
readme = "README.md"
description = """
Protocol buffer types for working with Envoy's XDS APIs.
"""


[lib]
doctest = false

[dependencies]
enum-map = "2.7"
once_cell = "1.19"
prost = "0.12"
tonic = { version = "0.11", default-features = false, features = [
    "prost",
    "codegen",
] }
pbjson = { version = "0.7", optional = true }
serde = { version = "1.0", optional = true }

[features]
transport = ["tonic/transport"]
pbjson = ["dep:pbjson", "dep:serde"]
descriptor = []

[dev-dependencies]
anyhow = "1"
glob = "0.3"
pbjson-build = "0.7"
prost-build = "0.12"
prost-types = "0.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tonic-build = { version = "0.11", default-features = false, features = [
    "prost",
] }
xshell = "0.2"
