[package]
name = "xds-api"
version = "0.1.0"
edition = "2021"
authors = ["Junction Labs"]
license = "Apache-2.0"
repository = "https://github.com/junction-labs/xds-api"
homepage = "https://github.com/junction-labs/xds-api"
readme = "README.md"
description = """
Protocol buffer types for working with Envoy's XDS APIs.
"""


[lib]
doctest = false

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
once_cell = "1.19"
enum-map = "2.7"
serde = { version = "1.0", optional = true }
pbjson = { workspace = true, optional = true }

[features]
transport = ["tonic/transport"]
pbjson = ["dep:pbjson", "dep:serde"]
descriptor = []

[dev-dependencies]
serde_json = "1.0"
