[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
tonic-build = { workspace = true }
prost = { workspace = true }
prost-build = { workspace = true }
prost-types = { workspace = true }
pbjson-build = { workspace = true }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
xshell = "0.2"
